force-app/main/default/objects/Factura__c/Factura__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de Factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>