force-app/main/default/objects/Factura__c/fields/Cod_forma_pago__c.field-meta.xml
<CustomField>
    <fullName>Cod_forma_pago__c</fullName>
    <label>Cód. forma pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RECIBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>