force-app/main/default/objects/Factura__c/fields/Estado_documento__c.field-meta.xml
<CustomField>
    <fullName>Estado_documento__c</fullName>
    <label>Estado documento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pagado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>