force-app/main/default/objects/Factura__c/fields/Fecha_registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_registro__c</fullName>
    <label>Fecha de registro</label>
    <type>Date</type>
</CustomField>