force-app/main/default/objects/Factura__c/fields/Fecha_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vencimiento__c</fullName>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>