force-app/main/default/objects/Factura__c/fields/Id_Navision__c.field-meta.xml
<CustomField>
    <fullName>Id_Navision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nº Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>