force-app/main/default/objects/Factura__c/fields/Importe_inicial__c.field-meta.xml
<CustomField>
    <fullName>Importe_inicial__c</fullName>
    <label>Importe inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>