force-app/main/default/objects/Factura__c/fields/Importe_pendiente__c.field-meta.xml
<CustomField>
    <fullName>Importe_pendiente__c</fullName>
    <label>Importe pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>