force-app/main/default/objects/Factura__c/fields/Numero_documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_documento__c</fullName>
    <label>Nº de documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>