force-app/main/default/objects/Factura__c/fields/Tipo_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>Efecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>